[package]
name = "flow_estimator"
version = "0.0.0"
edition = "2021"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#yaml-rust2 = "0.9"
chrono = "0.4"
rand = "0.8"
rclrs = "*"
std_msgs = "*"
visualization_msgs = "*"
action_msgs = "*"
sensor_msgs = "*"
nav_msgs = "*"
builtin_interfaces = "*"
geometry_msgs = "*"
